test/files/pos/t4402/Foo.java
package test;

public abstract class Foo {
  protected interface Inner {
    public void hello();
  }
}

