test/files/neg/t3946/J.java
package p;
public class J {
    protected void m() { return; }
}
